--- a/src/components/sections/IntroCard.astro
+++ b/src/components/sections/IntroCard.astro
@@ -11,27 +11,26 @@ import { Linkedin, Github, Mail } from 'lucide-react'
       <div class="flex h-full flex-col">
         <h6 class="m-0 text-sm font-light text-gray-500">welcome</h6>
         <p class="m-0 text-xl font-light">
-          Hi, I'm <b class="font-bold">Andrés Camilo Plaza</b>, a software
-          developer, systems engineer and tattoo artist with strong focus on the
-          user experience, animations and micro interactions. I love to create
-          beautiful and functional interfaces, I am passionate about technology
-          and I am always looking for new challenges.
+          Salut je suis <b class="font-bold">Mamba Goumbala</b>, Un développeur logiciel,
+           ingénieur système et createur de contenues sur les reseaux , les animations et les micro-interactions.
+            J'aime créer des interfaces belles et fonctionnelles.
+            Passionné par la technologie, je suis toujours à la recherche de nouveaux défis.
         </p>
       </div>
       <div class="flex gap-4">
-        <a href={LINKS.github} aria-label="github profile" target="_blank">
+        <a href=https://github.com/blackmaa aria-label="github profile" target="_blank">
           <Button aria-label="github profile">
             <Github />
             <span class="sr-only">GitHub Profile</span>
           </Button>
         </a>
-        <a href={LINKS.linkedin} aria-label="linkeding profile" target="_blank">
+        <a href=https://www.linkedin.com/in/mamba-goumbala-0a0b96348?trk=contact-info  aria-label="linkeding profile" target="_blank">
           <Button aria-label="linkedin profile">
             <Linkedin />
             <span class="sr-only">Linkedin Profile</span>
           </Button>
         </a>
-        <a href={LINKS.mail} aria-label="mail profile" target="_blank">
+        <a href=https:mambagoumbala4@gmail.com aria-label="mail profile" target="_blank">
           <Button>
             <Mail />
             <span class="sr-only">Email contact</span>
