--- a/src/components/sections/MyStack.astro
+++ b/src/components/sections/MyStack.astro
@@ -4,12 +4,12 @@ import Card from '../Card.astro'
 
 <Card colSpan="md:col-span-2" rowSpan="md:row-span-1" title="My Stack">
   <p class="text-sm font-light">
-    Here's a snapshot of the primary tools and technologies I work with:
+   les language avec lesquelles j'ai eu a travailler:
   </p>
   <ul class="list-disc pl-5 text-sm font-light">
-    <li><strong>Solidjs</strong></li>
+    <li><strong>php</strong></li>
     <li><strong>JavaScript</strong></li>
-    <li><strong>Node.js</strong></li>
-    <li><strong>React.js</strong></li>
+    <li><strong>python</strong></li>
+    <li><strong>java</strong></li>
   </ul>
 </Card>
