--- a/src/components/sections/TattooCard.astro
+++ b/src/components/sections/TattooCard.astro
@@ -1,13 +1,13 @@
 ---
 import Card from '../Card.astro'
-import { LINKS } from '../../lib/constants'
+
 ---
 
 <Card
   colSpan="md:col-span-1"
   rowSpan="md:row-span-2"
-  title="Instagram tattoo"
-  href={LINKS.instagram}
+  title="Instagram Clip"
+  href=https://www.instagram.com/the_goumbala?igsh=MWxhNjNwdTE0Z2t6eg%3D%3D&utm_source=qr#
 >
   <div class="flex h-full w-full flex-col">
     <div>
@@ -21,7 +21,7 @@ import { LINKS } from '../../lib/constants'
     </div>
     <div>
       <p class="mt-2 text-sm text-muted-foreground">
-        If you want to see my tattoo's, you can follow me on Instagram.
+        Si tu veux voir mes videos Follow me sur Instagram
       </p>
     </div>
   </div>
