--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,12 +6,12 @@ import Card from '../components/Card.astro'
 import TimeZoneCard from '../components/sections/TimeZoneCard.astro'
 import ContactsCard from '../components/sections/ContactsCard.astro'
 import Now from '../components/sections/Now.astro'
-import CVCard from '../components/sections/CVCard.astro'
 import ExperienceCard from '../components/sections/ExperienceCard.astro'
 import TattooCard from '../components/sections/TattooCard.astro'
 import StudyCard from '../components/sections/StudyCard.astro'
+
 //
-import { motion, AnimatePresence } from 'framer-motion'
+
 ---
 
 <script>
@@ -38,7 +38,7 @@ import { motion, AnimatePresence } from 'framer-motion'
 </script>
 
 <BaseLayout
-  title="Andrés Plaza - Full Stack Developer"
+  title="Mamba Goumbala - Full Stack Developer"
   description="Andrés Plaza - Full Stack Developer - Portfolio, Projects, CV, About Me, Contact, Timezone, Now, Experience, Tattoo, Study"
 >
   <div
@@ -51,7 +51,6 @@ import { motion, AnimatePresence } from 'framer-motion'
   >
     <IntroCard />
     <AboutMe />
-    <CVCard />
     <Now />
     <Card
       colSpan="md:col-span-1"
